--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img src="https://en.wikipedia.org/wiki/PlayStation#/media/File:Sony-playstation_prototype.jpg" alt="old PlayStation">
+  <img src=""
 
 </body>
 </html>
