Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img src="https://en.wikipedia.org/wiki/PlayStation#/media/File:Sony-playstation_prototype.jpg" alt="old PlayStation">
-  <img src="https://en.wikipedia.org/wiki/PlayStation#/media/File:PS4-Console-wDS4.jpg" alt="PlayStation 4" title="PS4-Console"
+  <img src="https://en.wikipedia.org/wiki/PlayStation#/media/File:PS4-Console-wDS4.jpg" alt="PlayStation 4" title="PS4-Console">
 
 </body>
 </html>
